# haskell-base32768

./: CHANGELOG.md  LICENSE  README.md  base32768.cabal
exe-src/: Main-Test.hs
src/Data/: Base32768.hs
test-src/: test.html
