cabal-version:      3.0
name:               base32768
version:            0.1.0.1
synopsis:           qntm's base32768 encoder
description:        See <https://github.com/qntm/base32768>
license:            MIT
license-file:       LICENSE
author:             Nicolas Frisby
maintainer:         nicolas.frisby@gmail.com
category:           Codec, Data
build-type:         Simple

extra-doc-files:    CHANGELOG.md
extra-source-files: test-src/test.html

tested-with: GHC==8.10.7

source-repository head
  type:     git
  location: https://github.com/nfrisby/haskell-base32768

common shared
    ghc-options: -Wall -Wprepositive-qualified-module
    default-language: Haskell98

library
    import: shared

    hs-source-dirs: src

    build-depends: base >4 && <5
                 , bytestring >=0.9 && <1
                 , primitive >=0.8 && <0.10
                 , text >=1 && <3

    exposed-modules: Data.Base32768

executable generate-base32768-test-cases
    import: shared

    hs-source-dirs: exe-src
    main-is:        Main-Test.hs

    build-depends: base
                 , base32768
                 , bytestring
                 , random >=1.2 && <1.3
                 , text
